--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-&lt;div id="login-error-msg-holder"&gt; &lt;p id="login-error-msg"&gt;Invalid username &lt;span id="error-msg-second-line"&gt;and/or password&lt;/span&gt;&lt;/p&gt; &lt;/div&gt; &lt;form id="login-form"&gt; &lt;input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username"&gt; &lt;input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password"&gt; &lt;input type="submit" value="Login" id="login-form-submit"&gt; &lt;/form&gt;
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+
+        <!-- <meta name = "description" content="Pagina de TUTO" />
+        <meta name="keywords" content="html5, css3, javascript, diseño web" />
+        -->
+        <title>Pagina de practica</title>
+
+        <script src="login.js"></script>
+
+        <link rel="stylesheet" href="complemento.css">
+        
+    </head>
+    <body>
+        <div id="contenedor">
+            <section id="zonaform">
+                <form name="miform">
+                    <p>Clave: <br><input type="text" id="clave" required></p>
+                    <p>Valor: <br><input type="password" id="valor" required></textarea></p>
+                    <p><input type="button" id="grabar" value="Grabar"></p>
+                </form>
+            </section>
+
+            <section id="zonadatos">
+                A la espera de lectura.
+            </section>
+        </div>
+
+    </body>
+</html>
